# tenjin_news_scraper

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package.json  pnpm-lock.yaml
services/api/: CLAUDE.md  Dockerfile  README.md  alembic.ini  pyproject.toml
services/api/tenjin/: config.py
services/api/tenjin/api/: app.py  deps.py
services/api/tenjin/api/routes/: articles.py  sources.py  stream.py  topics.py
services/api/tenjin/api/schemas/: article.py  health.py
services/api/tenjin/db/: bootstrap.py  redis.py  session.py
services/api/tenjin/db/migrations/: env.py
services/api/tenjin/db/migrations/versions/: 04fee55c572b_add_feed_fetch_log.py  c6b68bc513a1_initial_schema.py  (+1 more)
services/api/tenjin/models/: __init__.py  article.py  base.py  fetch_log.py  source.py  topic.py
services/api/tenjin/pipeline/: dedupe.py  health.py  normalize.py  persist.py  prune.py  publish.py  search_fetch.py  topic_match.py
services/api/tenjin/sources/: base.py  feeds.py  google_news.py  hackernews.py  registry.py  rss.py
services/api/tenjin/topics/: presets.py  registry.py
services/api/tenjin/workers/: scheduler.py  scrape.py
services/api/tests/: conftest.py  test_config.py  test_pipeline.py  test_publish.py  test_search.py  test_smoke.py  test_sources_route.py
services/api/tests/pipeline/: test_health.py  test_search_fetch.py
services/api/tests/sources/: test_feeds.py  test_google_news.py  test_hackernews.py  test_hackernews_search.py  test_rss.py
services/api/tests/workers/: test_scrape_telemetry.py
(+59 files in other folders)
